# nexus

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml
app/: README.md  angular.json  package-lock.json  package.json
app/src/: styles.scss
app/src/app/: app.config.ts  app.html  app.routes.ts  auth.guard.ts  profile.ts
app/src/components/admin/: admin.component.html  admin.component.ts
app/src/components/chess-board/: chess-board.component.html  chess-board.component.scss  chess-board.component.ts
app/src/components/friends/: friends.component.html  friends.component.ts
app/src/components/game/: game.component.html  game.component.ts
app/src/components/home/: home.component.html  home.component.spec.ts  home.component.ts
app/src/components/layout/: layout.component.html  layout.component.scss  layout.component.ts
app/src/components/lobby/: lobby.component.html  lobby.component.ts
app/src/components/login/: login.component.html  login.component.scss  login.component.spec.ts  login.component.ts
app/src/components/register/: register.component.html  register.component.spec.ts  register.component.ts
app/src/environments/: environment.development.ts  environment.ts
app/src/interceptors/: auth-interceptor.ts
app/src/models/: auth.model.ts  login.model.ts  matchmaking.model.ts  profile.model.ts  register.model.ts  social.model.ts
app/src/services/: auth.service.ts  matchmaking.service.ts  realtime.service.ts  social.service.spec.ts  social.service.ts
crates/auth-service/: Cargo.toml
crates/auth-service/migrations/: 20260507110000_add_role_to_auth_accounts.sql
crates/auth-service/src/: app_state.rs  db.rs  main.rs  messaging.rs  models.rs  routes.rs  service.rs
crates/auth-service/src/repositories/: auth_repository.rs
crates/auth-service/src/routes/: auth_routes.rs
crates/auth-service/src/services/: auth_service.rs
crates/game-service/: .env.example  Cargo.toml
crates/game-service/scripts/: game.rhai
crates/game-service/src/: commands.rs  engine.rs  game.rs  main.rs  mappings.rs  nats.rs  rhai.rs
crates/integration-tests/: Cargo.toml
crates/integration-tests/src/: lib.rs
crates/integration-tests/tests/: current_flow.rs
crates/matchmaking-service/: .env.example  Cargo.toml
crates/matchmaking-service/migrations/: 20260507123000_create_matchmaking_rules_table.sql
crates/matchmaking-service/src/: app_state.rs  db.rs  main.rs  messaging.rs  middleware.rs  models.rs  repository.rs  routes.rs  service.rs  store.rs
crates/matchmaking-service/src/repositories/: matchmaking_rule_repository.rs  mod.rs
crates/nexus-shared/: Cargo.toml
crates/nexus-shared/src/: admin.rs  auth.rs  error.rs  lib.rs  matchmaking.rs  messaging.rs  nats.rs  redis_store.rs
crates/realtime-service/: .env.example  Cargo.toml
crates/realtime-service/src/: app.rs  app_state.rs  commands.rs  connection_registry.rs  events.rs  main.rs  messaging.rs  models.rs  rooms.rs  routes.rs
crates/realtime-service/src/routes/: mod.rs  websocket_routes.rs
crates/rooms-service/: Cargo.toml
crates/rooms-service/src/: app_state.rs  main.rs  messaging.rs  models.rs  redis_store.rs
crates/rooms-service/src/routes/: game_session_routes.rs  lobby_routes.rs  matchmaking_routes.rs  mod.rs
crates/rooms-service/src/services/: game_session_service.rs  lobby_service.rs  matchmaking_service.rs  mod.rs
crates/rooms-service/src/stores/: game_session_store.rs  lobby_store.rs  matchmaking_store.rs  mod.rs
crates/social-service/: .env.example  Cargo.toml  bad_words.txt
crates/social-service/migrations/: 20260623120000_create_friend_requests_table.sql  20260624110000_create_friendships_table.sql  20260624120000_create_user_blocks_table.sql  20260625120000_create_chat_messages_table.sql
crates/social-service/src/: app_state.rs  db.rs  main.rs  messaging.rs  models.rs  profanity.rs  repository.rs  routes.rs  service.rs
crates/users-service/: .env.example  Cargo.toml
crates/users-service/migrations/: 20260423190000_create_user_profiles_table.sql
crates/users-service/src/: app_state.rs  db.rs  main.rs  messaging.rs  repository.rs  routes.rs  service.rs
demo/: index.html  main.js  package-lock.json  package.json  styles.css
docker/nats/: commands.json  events.json  script.sh
docker/pgadmin/: servers.json
docs/: nats-cli.md
nats/: commands.json  events.json
services/auth-service/: .env.example  Cargo.toml
services/auth-service/migrations/: 20260423150000_create_auth_table.sql
services/auth-service/src/: app_state.rs  error.rs  main.rs  messaging.rs  models.rs
services/auth-service/src/repositories/: auth_repository.rs
services/auth-service/src/routes/: auth_routes.rs  mod.rs
services/auth-service/src/services/: auth_service.rs
services/users-service/: Cargo.toml
services/users-service/src/: app_state.rs  error.rs  main.rs  messaging.rs  models.rs
services/users-service/src/repositories/: user_profile_repository.rs
services/users-service/src/routes/: user_routes.rs
services/users-service/src/services/: user_service.rs
users-service/: Cargo.toml
users-service/migrations/: 20260407163206_create_users_table.up.sql
users-service/src/: main.rs
users-service/src/db/: mod.rs  users.rs
users-service/src/model/: users.rs
users-service/src/routes/: mod.rs  users.rs
(+10 files in other folders)
