[package]
name = "game-service"
version = "0.1.0"
edition = "2024"

[dependencies]
async-nats = "0.47.0"
bytes = "1.11.1"
dotenvy = "0.15.7"
futures-util = "0.3.32"
nexus-shared = { path = "../nexus-shared" }
rhai = { version = "1.25.0", features = ["serde"] }
serde_json = "1.0"
tokio = { version = "1.50.0", features = ["full"] }
