[package]
name = "game-service"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
nexus-shared = { path = "../nexus-shared" }
rhai = { version = "1.25.0", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
