[package]
name = "integration-tests"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]

[dev-dependencies]
async-nats = "0.47.0"
futures-util = "0.3.32"
nexus-shared = { path = "../nexus-shared" }
redis = { version = "0.32.7", features = ["aio", "tokio-comp"] }
reqwest = { version = "0.12.28", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serial_test = "3.4.0"
tokio = { version = "1.50.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
