[package]
name = "nexus-shared"
version = "0.1.0"
edition = "2024"

[dependencies]
async-nats = "0.47.0"
axum = "0.8.8"
jsonwebtoken = "9.3.1"
redis = { version = "0.32.3", features = ["aio", "tokio-comp"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
