[package]
name = "realtime-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["ws"] }
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
dotenvy = "0.15.7"
futures-util = "0.3.32"
nexus-shared = { path = "../nexus-shared" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["trace"] }
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
