[package]
name = "users-service"
version = "0.1.0"
edition = "2024"

[dependencies]
async-nats = "0.47.0"
axum = "0.8.8"
dotenvy = "0.15.7"
futures-util = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["macros", "postgres", "runtime-tokio-rustls", "uuid"] }
tokio = { version = "1.50.0", features = ["full"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
